	* Buddies' requests to add you to their lists now prompt for
	  authorization
	* Account option to ignore chat and conference invitations (Peter
	  Lawler)
	* Added a /list command to bring up the room list (Peter Lawler)

	AIM/ICQ Features:
	* ICQ file transfer support with newer ICQ clients (Jonathan Clark,
	  Google Summer of Code)
	* Many overall improvements to OSCAR file transfers (Jonathan Clark,
	  Google Summer of Code)
	* Ability to set ICQ "require authorization" and "web aware"
	  setting (Ettore Simone)
	* ICQ encoding fix for offline buddies (Ilya Konstantinov)

	IRC Features:
	* SSL support for IRC connections (Daniel Atallah)
	* Show an error message when temporarily unable to join an IRC
	  channel or change your nick
	* Added /nickserv, /memoserv, /chanserv and /operserv
	  commands (Joao Luís Marques Pinto)
	* Added CTCP VERSION via /version (Andrej Krivulčík)

	Jabber Features:
	* Support for SRV lookups
	* Support for buddy icons
	* Jabber User Directory searching

	SILC Features:
	* Whiteboard support (Pekka Riikonen)
	* Sending/receiving images in IMs (Pekka Riikonen)
	* Cipher and HMAC selection support (Pekka Riikonen)
	* Buddy Icon support (Pekka Riikonen)

	Other Protocol Changes:
	* Bonjour (Rendezvous) protocol support (Juanjo Molinero Horno, Google
	  Summer of Code)
	* Updated Gadu-Gadu protocol support (Bartosz Oler, Google Summer of
	  Code).  This requires the libgadu library.  See
	  http://gaim.sourceforge.net/faq2.php#libgadu for more information.
	* SIP/SIMPLE support (Thomas Butter, Google Summer of Code)
	* Sametime protocol support
	  Requires the meanwhile library: http://meanwhile.sourceforge.net
	* QQ protocol support (Mark Huetsch, Google Summer of Code)
	* Removed support for the Napster and TOC protocols

	Other Noteworthy Changes:
	* UPnP and NAT traversal support (Adam J. Warrington, Google Summer of
	  Code)
	* The modify account dialog now contains two tabs, which should display